implement standardised **Toast Notifications**

--- a/src/index.css
+++ b/src/index.css
@@ -40,6 +40,10 @@
     --destructive: 0 75% 55%;
     --destructive-foreground: 0 0% 98%;
 
+    /* Success color */
+    --success: 142 71% 45%;
+    --success-foreground: 0 0% 98%;
+
     /* Borders + Inputs */
     --border: 240 5% 20%;
     --input: 240 5% 20%;
